--- a/mobilefirst/stylesbegivnheder.css
+++ b/mobilefirst/stylesbegivnheder.css
@@ -22,6 +22,7 @@ p {
     letter-spacing: 0.7px;
 }
 
+
 /*NAV A STREG UNDER VED AKTIV SIDE*/
 nav a:nth-child(3) {
     position: relative;
@@ -88,7 +89,7 @@ nav a:nth-child(3):before {
 
     text-align: center;
     margin: 100px auto 80px;
-    max-width: 820;
+    max-width: 820px;
     position: relative;
 
     color: #CEA948;
@@ -98,24 +99,24 @@ nav a:nth-child(3):before {
 .overskrift:before {
     content: '';
     display: block;
-    width: 300px;
+    width: 200px;
     height: 1px;
 
     background: #CEA948;
     position: absolute;
-    left: 10%;
+    left: -10%;
     top: 50%;
 }
 
 .overskrift:after {
     content: '';
     display: block;
-    width: 300px;
+    width: 200px;
     height: 1px;
 
     background: #CEA948;
     position: absolute;
-    right: 10%;
+    right: -10%;
     top: 50%;
 }
 
@@ -200,18 +201,70 @@ nav a:nth-child(3):before {
 
 .sektioner{
     flex-flow: row wrap;
-    height: 700px;
+    height: 600px;
 }
 .container img{
     display: block;
     order: 1;
     width: 100%;
-    height: 300px;
+    height: 250px;
 }
 .sektioner .text{
     display: block;
     order: 2;
     width: 100%;
-    height: 400px;
+    height: 350px;
+    padding: 50px;
+}
+.overskrift {
+    margin: 10px auto 30px;
+    text-align: center;
+    max-width: 820px;
+    position: relative;
+
+    color: #CEA948;
+    font-size: 12pt;
+}
+
+.overskrift:before {
+    content: '';
+    display: block;
+    width: 60px;
+    height: 1px;
+
+    background: #CEA948;
+    position: absolute;
+    left: 8%;
+    top: 50%;
+}
+
+.overskrift:after {
+    content: '';
+    display: block;
+    width: 60px;
+    height: 1px;
+
+    background: #CEA948;
+    position: absolute;
+    right: 8%;
+    top: 50%;
+}
+.wave{
+    position: relative;
+    top: 20px;
+}
+
+.waveto img{
+    position: relative;
+    top: 50px;
+}
+
+.wavetre img{
+    position: relative;
+    top: 370px;
+}
+.baggrundbegivenheder{
+    height: 300px;
+    position: relative;
 }
 }
