--- a/mobilefirst/forside.css
+++ b/mobilefirst/forside.css
@@ -207,5 +207,34 @@ main .topbillede {
 .map{
 -webkit-filter: grayscale(100%);
 margin-top: 100px;
+}
 
+
+
+@media screen and (max-width:910px) {
+.cardsforside {
+    display: flex;
+    flex-direction: column;
+    color: #cea948;
+    border-radius: 22px;
+    /*margin-top: 20%;*/
+    margin-bottom: 50px;
+    margin-right: 8%;
+    margin-left: 8%;
+}
+.imgforside{
+    width: 100%;
+    height: 230px;
+    border-radius: 20px;
+    border: 2px solid #cea948;
+    order: 1;
+}
+.textforside{
+    order: 2;
+    display: flex;
+    justify-content: center;
+    text-align: left;
+    width: 500px;
+    height: 350px;
+}
 }
