--- a/mobilefirst/contact.css
+++ b/mobilefirst/contact.css
@@ -3,16 +3,6 @@
     margin: 0;
     padding: 0;
 }
-
-/*h1{
-    margin-top: 15px;
-    align-items: center;
-    justify-content: center;
-    margin-left: 28px;
-    font-size: 20pt;
-}*/
-
-/*GENERELLE REGLER*/
 body {
     background-color: #0E1E24;
     color: #CEA948;
@@ -26,102 +16,246 @@ h2 {
     /*fontfamily*/
 }
 
-/*NAV A STREG UNDER VED AKTIV SIDE*/
-nav a:nth-child(4){
-    position:relative;
-    color:#CEA948;
-}
-
-nav a:nth-child(4):before{
-    content: "";
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #CEA948;
-    transform-origin: left;
-    transform: scaleX(1);
-    text-decoration: underline;
-}
-
-
-.topbillede {
-    background-image: url(images/dåseølheader.png);
-    width: 100%;
-    height: 500px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-
-    position: relative;
-    top: 100px;
-}
-
-/*SIDENS HOVEDOVERSKRIFT*/
-.sideoverskrift {
-    margin: 200px auto 80px;
-    text-align: center;
-    max-width: 820;
-    position: relative;
-
-    color: #CEA948;
-    font-size: 30pt;
-}
-
-.sideoverskrift:before {
-    content: '';
-    display: block;
-    width: 350px;
-    height: 1px;
-
-    background: #CEA948;
-    position: absolute;
-    left: 10%;
-    top: 50%;
-}
-
-.sideoverskrift:after {
-    content: '';
-    display: block;
-    width: 350px;
-    height: 1px;
-
-    background: #CEA948;
-    position: absolute;
-    right: 10%;
-    top: 50%;
-}
-
 /*kontaktformular*/
 
-.contact {
+/*MOBIL_______________________*/
+@media screen and (max-width:910px) {
+    .topbillede {
+        background-image: url(images/dåseølheader.png);
+        width: 100%;
+        height: 200px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    
+        position: relative;
+        top: 100px;
+    }
+
+    /*BØLGER*/
+.topbillede img {
+    width: 100%;
+    position: relative;
+    top: 400px;
+    /*skubbe bølgen ned af*/
+}
+   
+   /*Overskrifter 12pt, brødtekster 10*/
+
+   .contactus p {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+
+    width: 100%;
+    height:200px;
+
+   
+}
+
+   .contact{
+    margin-top:100px;
+    margin-bottom:60px;
+    align-items:center;
+    justify-content:center;
+    display: flex;
+
+    margin-left: 8%;
+    margin-right:8%;
+    
+   }
+   
+   .contactformular {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #cea948;
+    border-radius: 10px;
+    background-color: #0E1E24;
+
+    position: relative;
+    flex-direction: column;
+    width: 350px;
+    margin-top:50px;
+
+    margin-bottom: 10px;
+
+
+}
+
+.field {
+    width: 300px;
+    height: 50px;
+    margin-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    
+    border: 1px solid #cea948;
+    border-radius: 8px;
+
+    outline: none;
+    display: flex;
+    background-color: #2f667a;
+    color: #cea948;
+    font-size: 16pt bold;
+
+
+}
+
+.field-textarea {
+    height: 150px;
+    width: 300px;
+
+    margin-top: 20px;
+
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    
+    border: 1px solid #cea948;
+    border-radius: 8px;
+    background-color: #2f667a;
+    color: #cea948;
+
+    font-size: 12pt bold;
+
+}
+.btn {
+    display: flex;
+    justify-content: center;
+
+    color: #cea948;
+    background-color: #2f667a;
+
+    font-family: 'Playfair Display SC', serif;
+    font-size: 12pt;
+
+    border: none;
+    cursor: pointer;
+
+    width: 30%;
+    border: 1px solid #cea948;
+    border-radius: 8px;
+
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 10px;
+
+}
+
+/*KORTUDVALG*/
+.kortudvalgshop .textcontainer,
+.kortudvalgbar .textcontainer {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    line-height: 20px;
+    text-align: center;
+}
+
+.textcontainer h1 {
+    margin-bottom: 50x;
+}
+
+.find {
+    margin-bottom: 10px;
+}
+
+/*Kortudbalgbar og shop*/
+.kortudvalgbar {
+    display: flex;
+    flex-direction: column;
+
+    color: #cea948;
+
+    border-radius: 22px;
+    /*margin-top: 20%;*/
+    margin-bottom: 50px;
+    margin-right: 8%;
+    margin-left: 8%;
+}
+
+.kortudvalgbar div:first-child {
+    width: 100%;
+    height: 100px;
+    margin-bottom: 150px;
+}
+
+.kortudvalgbar div:first-child img {
+    width: 100%;
+    height: 230px;
+    border-radius: 20px;
+    border: 2px solid #cea948;
+}
+
+
+.kortudvalgbar div:nth-child(2) {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-items: center;
-    width: 100%;
-    height:800px;
-
-    padding:150px;
-
-}
-
-.contactus p {
-    display: flex;
-    justify-content: center;
     text-align: center;
 
-    position: relative;
-    top:100px;
-    width: 100%;
-    height:225px;
-
-    padding-left:100px;
-    padding-right:100px;
-    
 }
+
+.kortudvalgbar div:nth-child(2) h1 {
+    margin-bottom:1;
+}
+
+/*kortudvalgshop*/
+.kortudvalgshop {
+        display: flex;
+        flex-direction: column;
+    
+        color: #cea948;
+    
+        border-radius: 22px;
+        /*margin-top: 20%;*/
+        margin-bottom: 50px;
+        margin-right: 8%;
+        margin-left: 8%;
+    }
+    
+    .kortudvalgshop div:first-child {
+        width: 100%;
+        height: 100px;
+        margin-bottom: 150px;
+    }
+    
+    .kortudvalgshop div:first-child img {
+        width: 100%;
+        height: 230px;
+        border-radius: 20px;
+        border: 2px solid #cea948;
+    }
+    
+    .openinghours{
+        align-items: center;
+        justify-content: center;
+    }
+    .openinghours .secondtext p{
+        
+        font-family: 'Playfair Display SC', serif;
+        font-size: 10pt;
+    }
+    
+ 
+
+}
+
+
+
+
+
+/*laptop*/
+@media screen and (min-width:910px){
+
+
+/*GENERELLE REGLER*/
 
 /*kontaktformular*/
 .contactformular {
@@ -208,6 +342,106 @@ nav a:nth-child(4):before{
 }
 
 
+/*NAV A STREG UNDER VED AKTIV SIDE*/
+nav a:nth-child(4){
+    position:relative;
+    color:#CEA948;
+}
+
+nav a:nth-child(4):before{
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #CEA948;
+    transform-origin: left;
+    transform: scaleX(1);
+    text-decoration: underline;
+}
+
+
+.topbillede {
+    background-image: url(images/dåseølheader.png);
+    width: 100%;
+    height: 500px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+    position: relative;
+    top: 100px;
+}
+
+/*SIDENS HOVEDOVERSKRIFT*/
+
+.sideoverskrift {
+    margin: 200px auto 80px;
+    text-align: center;
+    max-width: 820;
+    position: relative;
+
+    color: #CEA948;
+    font-size: 30pt;
+}
+
+.sideoverskrift:before {
+    content: '';
+    display: block;
+    width: 350px;
+    height: 1px;
+
+    background: #CEA948;
+    position: absolute;
+    left: 10%;
+    top: 50%;
+}
+
+.sideoverskrift:after {
+    content: '';
+    display: block;
+    width: 350px;
+    height: 1px;
+
+    background: #CEA948;
+    position: absolute;
+    right: 10%;
+    top: 50%;
+}
+
+
+
+.contact {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height:800px;
+
+    padding:150px;
+
+}
+
+.contactus p {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+
+    position: relative;
+    top:100px;
+    width: 100%;
+    height:225px;
+
+    padding-left:100px;
+    padding-right:100px;
+   
+}
+
+
+
 /*BØLGER*/
 .topbillede img {
     width: 100%;
@@ -215,65 +449,6 @@ nav a:nth-child(4):before{
     top: 400px;
     /*skubbe bølgen ned af*/
 }
-
-
-
-/*kortudvalg til baren*/
-/*.kortudvalgbar {
-    display: flex;
-    flex-direction: row;
-    border: 1px solid #cea948;
-    background-color: #204653;
-    color: #cea948;
-    border-radius: 22px;
-    height: 500px;
-    width:80%;
-    margin-bottom: 100px;
-    margin-right: 10%;
-    margin-left: 10%;
-    text-align:left;
-    justify-content: center;
-    
-}
-
-.kortudvalgbar .textcontainer {
-    width: 100%;
-}
-
-.kortudvalgbar img {
-    width: 120%;
-}
-
-.kortudvalgbar img {
-    width: 100%;
-    height: 100%;
-
-    border-radius: 20px;
-    border: 2px solid #cea948;
-
-}
-
-.kortudvalgbar .textcontainer {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    text-align:left;
-    text-align: center;
-    text-align: center;
-    padding: 50px 30px;
-
-}
-
-
-
-.kortudvalgbar div:nth-child(2) h1 {
-    padding-top: 0px;
-    margin-bottom: 25px;
-    /*font-family: ???
-}/*
-
-/*.kortudvalg div:nth-child(2) p{ ARBEJD PÅ SENERE
-}*/
 
 
 /*kortudvalg til shoppen og baren*/
@@ -325,7 +500,7 @@ nav a:nth-child(4):before{
 }
 
 .textcontainer h1 {
-    margin-bottom: 20px;
+    margin-bottom: 20x;
 }
 
 .find {
@@ -373,3 +548,12 @@ nav a:nth-child(4):before{
     padding: 10px;
     font-size: 14pt;
 }
+}
+
+
+
+
+
+
+
+    
