--- a/mobilefirst/contact.css
+++ b/mobilefirst/contact.css
@@ -40,8 +40,43 @@ h2 {
     /*skubbe bølgen ned af*/
 }
    
-   /*Overskrifter 12pt, brødtekster 10*/
+/*SIDENS HOVEDOVERSKRIFT*/
 
+.sideoverskrift {
+    margin: 200px auto 80px;
+    text-align: center;
+    max-width: 820;
+    position: relative;
+
+    color: #CEA948;
+    font-size: 20pt;
+}
+
+.sideoverskrift:before {
+    content: '';
+    display: block;
+    width: 35px;
+    height: 1px;
+
+    background: #CEA948;
+    position: absolute;
+    left: 10%;
+    top: 50%;
+}
+
+.sideoverskrift:after {
+    content: '';
+    display: block;
+    width: 35px;
+    height: 1px;
+
+    background: #CEA948;
+    position: absolute;
+    right: 10%;
+    top: 50%;
+}
+
+/*velkommen til kontakt*/
    .contactus p {
     display: flex;
     justify-content: center;
@@ -65,6 +100,7 @@ h2 {
     
    }
    
+   /*kontaktformular*/
    .contactformular {
     display: flex;
     justify-content: center;
@@ -76,11 +112,8 @@ h2 {
     position: relative;
     flex-direction: column;
     width: 350px;
-    margin-top:50px;
-
+    margin-top:15px;
     margin-bottom: 10px;
-
-
 }
 
 .field {
@@ -98,8 +131,6 @@ h2 {
     background-color: #2f667a;
     color: #cea948;
     font-size: 16pt bold;
-
-
 }
 
 .field-textarea {
@@ -158,14 +189,6 @@ h2 {
     text-align: center;
 }
 
-.textcontainer h1 {
-    margin-bottom: 50x;
-}
-
-.find {
-    margin-bottom: 10px;
-}
-
 /*Kortudbalgbar og shop*/
 .kortudvalgbar {
     display: flex;
@@ -214,8 +237,8 @@ h2 {
         color: #cea948;
     
         border-radius: 22px;
-        /*margin-top: 20%;*/
-        margin-bottom: 50px;
+        /*margin-top:20%;*/
+        margin-bottom: 10px;
         margin-right: 8%;
         margin-left: 8%;
     }
@@ -232,20 +255,39 @@ h2 {
         border-radius: 20px;
         border: 2px solid #cea948;
     }
+
+    /*Åbningstider*/
     
     .openinghours{
         align-items: center;
         justify-content: center;
     }
-    .openinghours .secondtext p{
-        
+    .openinghours p{
         font-family: 'Playfair Display SC', serif;
         font-size: 10pt;
     }
     
- 
+    .openinghours h2{
+        font-size: 16pt;
+        margin-bottom:10px;
+    }
+
+    .firsttext {
+        background-color: #204653;
+        align-items: center;
+        justify-content: center;
+    }
+    .secondtext {
+        background-color: #2f667a;
+        align-items: center;
+        justify-content: center;
+    }
+.textcontainer{
+    margin-bottom:50px;
+}
 
 }
+
 
 
 
@@ -429,6 +471,7 @@ nav a:nth-child(4):before{
     display: flex;
     justify-content: center;
     text-align: center;
+    margin-bottom:50px;
 
     position: relative;
     top:100px;
@@ -500,11 +543,11 @@ nav a:nth-child(4):before{
 }
 
 .textcontainer h1 {
-    margin-bottom: 20x;
+    margin-bottom: 10x;
 }
 
 .find {
-    margin-bottom: 40px;
+    margin-bottom: 5px;
 }
 
 /*Åbningstider*/
@@ -523,7 +566,6 @@ nav a:nth-child(4):before{
     color: #CEA948;
     background-color: #204653;
     text-align: center;
-
     margin-top: 50px;
 }
 
@@ -541,7 +583,7 @@ nav a:nth-child(4):before{
     margin-top: 30px;
     margin-bottom: 20px;
     text-align: center;
-    font-size: 28pt;
+    font-size:20pt;
 }
 
 .openinghours p {
