--- a/mobilefirst/headerfooter.css
+++ b/mobilefirst/headerfooter.css
@@ -7,7 +7,7 @@
 body p {
     font-family: 'Arsenal', sans-serif;
     letter-spacing: 0.8px;
-    line-height: 22px;
+    line-height:1.3;
     font-size: 12pt;
 }
 
