--- a/mobilefirst/styles.css
+++ b/mobilefirst/styles.css
@@ -9,9 +9,9 @@ body {
     background-color: #0E1E24;
 }
 
-section {
+/*section {
     display: flex;
-}
+}*/
 
 h1 {
     font-family: 'Playfair Display SC', serif;
@@ -31,19 +31,19 @@ p {
 
 /*GENERELLE REGLER FOR OVERSKRIFT*/
 .overskrift {
-    margin: 130px auto 50px;
+    margin: 130px auto 30px;
     text-align: center;
-    max-width: 820px;
+    max-width: 820;
     position: relative;
 
     color: #CEA948;
-    font-size: 12pt;
+    font-size: 14pt;
 }
 
 .overskrift:before {
     content: '';
     display: block;
-    width: 40px;
+    width: 50px;
     height: 1px;
 
     background: #CEA948;
@@ -55,7 +55,7 @@ p {
 .overskrift:after {
     content: '';
     display: block;
-    width: 40px;
+    width: 50px;
     height: 1px;
 
     background: #CEA948;
@@ -127,33 +127,15 @@ p {
 
     /*OVERSKRIFT*/
     .overskrift{
-        display: flex;
-        justify-content: center;
         margin: 70px auto 30px;
     }
 
     .overskrift:before {
-        content: '';
-        display: block;
-        width: 80px;
-        height: 1px;
-    
-        background: #CEA948;
-        position: absolute;
-        left: 15%;
-        top: 50%;
+        width: 90px;
     }
     
     .overskrift:after {
-        content: '';
-        display: block;
-        width: 80px;
-        height: 1px;
-    
-        background: #CEA948;
-        position: absolute;
-        right: 15%;
-        top: 50%;
+        width: 90px;
     }
 
     /*SECTIONS MED TEKST OG BILLEDER*/
@@ -258,12 +240,9 @@ p {
 
     /*OVERSKRIFT*/
     .overskrift {
-        display: flex;
-        justify-content: center;
-
+        margin: 200px auto 80px;
         text-align: center;
-        margin: 100px auto 80px;
-        max-width: 820px;
+        max-width: 820;
         position: relative;
 
         color: #CEA948;
