--- a/mobilefirst/forside.css
+++ b/mobilefirst/forside.css
@@ -214,11 +214,29 @@ margin-top: 100px;
 @media screen and (max-width:910px) {
 main .topbillede{
     height:200px;
+    position: relative;
+    top:100px;
+
+}
+
+.topbillede h1 {
+    font-size: 16pt;
+    position: relative;
+    top: 0px;
+
+    padding-top: 16%;
+    padding-bottom:21%;
+    padding-left: 20%;
+    background: rgba(0,0,0,0.6);
+
+
 }
 
 .cardsforside {
     display: flex;
     flex-direction: column;
+    border:none;
+    background-color: transparent;
 
     color: #cea948;
     border-radius: 22px;
@@ -228,19 +246,20 @@ main .topbillede{
     margin-left: 8%;
 }
 
-.imgforside{
+.imgforside img{
     width: 100%;
-    height: 230px;
-    border-radius: 20px;
-    border: 2px solid #cea948;
+    height: 500px;
+    border-radius: 22px;
+    border: 1px solid #cea948;
     order: 1;
 }
+
 
 .textforside{
     order: 2;
     display: flex;
     justify-content: center;
-    text-align: left;
+    text-align: center;
     width: 500px;
     height: 350px;
 }
