--- a/mobilefirst/forside.css
+++ b/mobilefirst/forside.css
@@ -96,20 +96,13 @@ main .topbillede {
 
 
 /*CARDS BILLED STYLES*/
-.cardsforside div:first-child img {
+.imgforside img{
     width: 100%;
     height: 100%;
-    border-radius: 20px;
+    border-radius: 22px;
     border: 2px solid #cea948;
 }
 
-
-.cardsforside div:nth-child(2) img{
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-    border: 2px solid #cea948;
-}
 
 .cardsforside div:first-child, .cardsforside div:nth-child(2){
     width:50%;
@@ -171,8 +164,8 @@ main .topbillede {
 .instacontainer {
     display: flex;
     justify-content: center;
-    /*  flex-wrap; wrap;*/
-    font-family: 'Open Sans', sans-serif;
+    align-items: center;
+
     border-radius: 22px;
     margin: 10px;
     padding: 10px;
@@ -185,23 +178,6 @@ main .topbillede {
 .instacontainer img{
     border-radius: 20px;
 }
-
-
-/*ANDEN INSTA CONTAINER*/
-.secondinstacontainer {
-    border-radius: 22px;
-    display: flex;
-    justify-content: center;
-    /*  flex-wrap; wrap;*/
-    font-family: 'Open Sans', sans-serif;
-}
-
-.secondinstacontainer div{
-    margin: 10px;
-    padding: 10px;}
-
-.secondinstacontainer img{
-    border-radius: 20px;}
 
 /*Maps*/
 .map{
@@ -228,39 +204,127 @@ main .topbillede{
     padding-bottom:21%;
     padding-left: 20%;
     background: rgba(0,0,0,0.6);
+}
 
-
+.topbillede img{
+    top:-40px;
 }
 
 .cardsforside {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     border:none;
     background-color: transparent;
+
+    position: relative;
+    top:120px;
+
+    width:100%;
 
     color: #cea948;
     border-radius: 22px;
 
-    margin-bottom: 50px;
-    margin-right: 8%;
-    margin-left: 8%;
+    margin:0px;
+    margin-top:30px;
 }
 
 .imgforside img{
-    width: 100%;
-    height: 500px;
     border-radius: 22px;
     border: 1px solid #cea948;
     order: 1;
 }
 
+.cardsforside div:first-child, .cardsforside div:nth-child(2){
+    width:80%;
+}
 
-.textforside{
+.cardsforside .textforside{
     order: 2;
     display: flex;
     justify-content: center;
     text-align: center;
-    width: 500px;
-    height: 350px;
+    width: 100%;
+
+    padding:0px;
 }
+
+.textforside h2{
+    font-size: 16pt;
+    margin-top:20px;
+    margin-bottom: 10px;
+}
+
+.textforside p{
+    font-size: 12pt;
+}
+
+.button{
+    width:50%;
+    background-color: #204653;
+    justify-content: center;
+    border:none;
+}
+
+
+
+/*INSTAGRAM OVERSKRIFT*/
+.overskriftinstagram {
+    margin: 180px auto 30px;
+    text-align: center;
+    max-width: 820;
+    position: relative;
+
+    color: #CEA948;
+    font-size: 14pt;
+}
+
+.overskriftinstagram:before {
+    content: '';
+    display: block;
+    width: 55px;
+    height: 1px;
+
+    background: #CEA948;
+    position: absolute;
+    left: 10%;
+    top: 50%;
+}
+
+.overskriftinstagram:after {
+    content: '';
+    display: block;
+    width: 55px;
+    height: 1px;
+
+    background: #CEA948;
+    position: absolute;
+    right: 10%;
+    top: 50%;
+}
+
+/*INSTAGRAM KORT*/
+.instacontainer{
+    margin-right:5%;
+    margin-left: 5%;
+    padding:0px;
+}
+
+.instacontainer div{
+    margin:0px;
+}
+
+.instacontainer img{
+    width:100%;
+    border-radius: 5px;
+}
+
+/*MAPS*/
+.map{
+    margin-top:50px;
+    margin-bottom:50px;
+}
+
+
 }
