--- a/mobilefirst/styles.css
+++ b/mobilefirst/styles.css
@@ -241,7 +241,7 @@ p {
 
     /*OVERSKRIFT*/
     .overskrift {
-        margin: 150px auto 80px;
+        margin: 100px auto 50px;
         text-align: center;
         max-width: 820;
         position: relative;
@@ -307,6 +307,10 @@ p {
 
     .divto h1 {
         margin-bottom: 20px;
+    }
+
+    .sectionto, .sectiontre{
+        display:flex;
     }
 
     /*BØLGE TO*/
