--- a/mobilefirst/contact.css
+++ b/mobilefirst/contact.css
@@ -46,7 +46,7 @@ h2 {
     .sideoverskrift {
         margin: 130px auto 30px;
         text-align: center;
-        max-width: 820;
+        max-width: 820px;
         position: relative;
 
         color: #CEA948;
@@ -135,7 +135,7 @@ h2 {
         display: flex;
         background-color: #2f667a;
         color: #cea948;
-        font-size: 16pt bold;
+        font-size: 16pt;
     }
 
     .field-textarea {
@@ -153,7 +153,7 @@ h2 {
         background-color: #2f667a;
         color: #cea948;
 
-        font-size: 12pt bold;
+        font-size: 12pt;
 
     }
 
@@ -338,7 +338,7 @@ h2 {
         display: flex;
         background-color: #2f667a;
         color: #cea948;
-        font-size: 16pt bold;
+        font-size: 16pt;
 
 
     }
@@ -358,7 +358,7 @@ h2 {
         background-color: #2f667a;
         color: #cea948;
 
-        font-size: 12pt bold;
+        font-size: 12pt;
 
     }
 
@@ -429,7 +429,7 @@ h2 {
     .sideoverskrift {
         margin: 200px auto 80px;
         text-align: center;
-        max-width: 820;
+        max-width: 820px;
         position: relative;
 
         color: #CEA948;
