--- a/mobilefirst/forside.css
+++ b/mobilefirst/forside.css
@@ -185,6 +185,14 @@ filter: grayscale(100%);
 margin-top: 100px;
 }
 
+.instacontainer img{
+    transition: transform 2s;
+}
+
+.instacontainer img:hover{
+    transform: scale(1.1);
+}
+
 
 
 @media screen and (max-width:910px) {
@@ -273,7 +281,7 @@ main .topbillede{
 .overskriftinstagram {
     margin: 180px auto 30px;
     text-align: center;
-    max-width: 820;
+    max-width: 820px;
     position: relative;
 
     color: #CEA948;
