--- a/mobilefirst/styles.css
+++ b/mobilefirst/styles.css
@@ -33,7 +33,7 @@ p {
 .overskrift {
     margin: 130px auto 30px;
     text-align: center;
-    max-width: 820;
+    max-width: 820px;
     position: relative;
 
     color: #CEA948;
@@ -243,7 +243,7 @@ p {
     .overskrift {
         margin: 100px auto 50px;
         text-align: center;
-        max-width: 820;
+        max-width: 820px;
         position: relative;
 
         color: #CEA948;
