--- a/mobilefirst/øl.css
+++ b/mobilefirst/øl.css
@@ -52,7 +52,7 @@ main {
     .sideoverskrift {
         margin: 130px auto 50px;
         text-align: center;
-        max-width: 820;
+        max-width: 820px;
         position: relative;
 
         color: #CEA948;
@@ -275,7 +275,7 @@ main {
     .sideoverskrift {
         margin: 100px auto 80px;
         text-align: center;
-        max-width: 820;
+        max-width: 820px;
         position: relative;
 
         color: #CEA948;
