--- a/mobilefirst/forside.css
+++ b/mobilefirst/forside.css
@@ -183,7 +183,9 @@ main .topbillede {
 .map{
 filter: grayscale(100%);
 margin-top: 100px;
+width:100%;
 }
+
 
 .instacontainer img{
     transition: transform 2s;
