mobil navn ændring

--- a/mobilefirst/øl.css
+++ b/mobilefirst/øl.css
@@ -132,7 +132,7 @@ main {
 
     /*ØL MENU STYLES*/
     .ølmenu {
-        background-image: url(images/dåsermobil.png);
+        background-image: url(images/daasermobil.png);
         background-size: cover;
         background-repeat: no-repeat;
 
@@ -400,7 +400,7 @@ main {
 
     /*ØL MENU STYLES*/
     .ølmenu {
-        background-image: url(images/dåser2.png);
+        background-image: url(images/daaser.png);
         /*billede skal måske skiftes*/
         background-size: cover;
         background-repeat: no-repeat;
